D8ISUTHEME-82 Make sure the tags field clears floats in the content area and add spacing.

--- a/css/theme.css
+++ b/css/theme.css
@@ -666,6 +666,12 @@ article:not(.isu-user):not(.isu-search_collapse) {
   margin-top: 1rem;
 }
 
+
+.isu-field-tags {
+  padding-top: 1rem;
+  clear: both;
+}
+
 /* -------------------------------------- */
 /* ## COMPONENTS
 /* -------------------------------------- */
